--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "env": {
     "test": {
-      "plugins": ["transform-react-jsx", "transform-es2015-modules-commonjs"]
+      "plugins": ["transform-react-jsx", "transform-es2015-modules-commonjs", "transform-object-rest-spread"]
     }
   }
 
