--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "enzyme": "^2.8.2",
     "identity-obj-proxy": "^3.0.0",
     "react-addons-test-utils": "^15.5.1",
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "react-test-renderer": "^15.5.4"
   },
   "dependencies": {
     "jest": "^20.0.4",
