--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,18 @@
 {
   "env": {
     "test": {
-      "plugins": ["transform-react-jsx", "transform-es2015-modules-commonjs", "transform-object-rest-spread"]
+      "plugins": [
+        "babel-plugin-transform-class-properties",
+        ["babel-plugin-transform-object-rest-spread", {useBuiltIns: true}],
+        ["babel-plugin-transform-react-jsx", {useBuiltIns: true}],
+        ["babel-plugin-transform-runtime", {helpers: false, polyfill: false, regenerator: true}],
+        "babel-plugin-transform-react-jsx-source",
+        "babel-plugin-transform-react-jsx-self"
+      ],
+      "presets": [
+        "babel-preset-react-app",
+        "babel-preset-env"
+      ]
     }
   }
 
