--- a/package.json
+++ b/package.json
@@ -3,8 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-loader": "^7.0.0",
+    "babel-plugin-dynamic-import-node": "^1.0.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-transform-react-jsx-self": "^6.22.0",
+    "babel-plugin-transform-react-jsx-source": "^6.22.0",
+    "babel-plugin-transform-regenerator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "enzyme": "^2.8.2",
     "enzyme-to-json": "^1.5.1",
     "identity-obj-proxy": "^3.0.0",
@@ -15,6 +27,8 @@
     "react-test-renderer": "^15.5.4"
   },
   "dependencies": {
+    "babel-jest": "^20.0.3",
+    "babel-preset-react-app": "^3.0.0",
     "jest": "^20.0.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
