--- a/jest.config.json
+++ b/jest.config.json
@@ -9,7 +9,14 @@
     "coverageDirectory": "<rootDir>/coverage/",
     "transform": {
       "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest"
-    }
+    },
+    "coverageThreshold": {
+      "global": {
+        "branches": 50,
+        "functions": 50,
+        "lines": 50,
+        "statements": 50
+      }
 
 
 }
