--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-addons-test-utils": "^15.5.1",
     "react-scripts": "1.0.7",
     "react-test-renderer": "^15.5.4",
+    "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0"
   },
   "dependencies": {
