--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux-thunk": "^2.2.0"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "babel-jest": "^20.0.3",
     "babel-preset-react-app": "^3.0.0",
     "jest": "^20.0.4",
