--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "1.0.7",
     "react-test-renderer": "^15.5.4",
     "redux-mock-store": "^1.2.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "youtube-api-search": "^0.0.5"
   },
   "dependencies": {
     "axios": "^0.17.0",
