--- a/jest.config.json
+++ b/jest.config.json
@@ -1,22 +1,22 @@
 {
-
   "verbose": true,
   "collectCoverage": true,
+  "collectCoverageFrom": ["src/**/*.{js,jsx}"],
+  "testMatch": ["<rootDir>__tests__/**/?(*.)(spec|test).js?(x)"],
   "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
-    },
-    "coverageDirectory": "<rootDir>/coverage/",
-    "transform": {
-      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest"
-    },
-    "coverageThreshold": {
-      "global": {
-        "branches": 50,
-        "functions": 80,
-        "lines": 50,
-        "statements": 50
-      }
+    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+    "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+  },
+  "coverageDirectory": "<rootDir>/coverage/",
+  "transform": {
+    "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest"
+  },
+  "coverageThreshold": {
+    "global": {
+      "branches": 50,
+      "functions": 80,
+      "lines": 50,
+      "statements": 50
     }
-
+  }
 }
