--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "./node_modules/.bin/jest --config jest.config.json",
-    "test:dev": "./node_modules/.bin/jest --config jest.config.json --watch"
+    "test:dev": "./node_modules/.bin/jest --config jest.config.json --watch",
+    "test:coverage": "./node_modules/.bin/jest --config jest.config.json --coverage"
   },
   "eslintConfig": {
     "extends": "react-app"
